# otus_cpp_matrix

./: CMakeLists.txt  Doxyfile  README.md  main.cpp  matrix.cpp  matrix.h
.github/workflows/: release.yml
